<resources>
    <string name="app_name">PADataBindingNavigation</string>
    <string name="name">name</string>
    <string name="last_name">last name</string>
    <string name="start_button">start</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guess_the_number">guess the number</string>
    <string name="guess_btn">guess</string>
    <string name="play_again_btn">play again</string>
    <string name="share_btn">share</string>
    <string name="rules">  You shall try to guess the number (bigger than 0 less than 100), which was generated by the program. Input number and push the guess button.</string>
    <string name="game_rules">GAME RULES</string>
    <string name="registration">REGISTRATION</string>
    <string name="lose_text"> %1$s %2$s you lose</string>
    <string name="winning_number">Winning number is %1$s</string>
    <string name="congrat">CONGRATULATIONS !!! %1$s %2$s you win</string>
    <string name="warning">"Number must be not less than 0 and not bigger than 100"</string>
</resources>
