<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".WinFragment"
        android:background="@color/colorLightGreen">

        <TextView
            android:id="@+id/congrat_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:gravity="center"
            android:layout_margin="8dp"
            android:text="@string/hello_blank_fragment" />

        <TextView
            android:id="@+id/winning_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:layout_margin="8dp"
            android:text="@string/hello_blank_fragment" />

        <Button
            android:id="@+id/play_again_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/play_again_btn" />

        <Button
            android:id="@+id/share_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/share_btn" />

    </LinearLayout>
</layout>